--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
 
     <body>
-        
+        <link rel="icon" href="images\list.png" type="image/x icon">
 
         
         <div id="header">
